--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: "https://iuyr.github.io" # the base hostname & protocol for your site e.g. 
 author:
   name: 流殇君
   twitter:
-  picture:
+  picture: https://api.adorable.io/avatars/285/johndoe.png
 twitter_username:
 github_username: iuyr
 logo: # path of site logo, e.g. "/assets/images/logo.png"
